--- a/templates/html/music.html
+++ b/templates/html/music.html
@@ -2,13 +2,11 @@
 <html lang="en-us">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Chandler Chilvers: Music</title>
 	</head>
 
 	<body>
-		<main>
-            <h1>About</h1>
-		</main>
+		<h1>Music</h1>
+		<a href="/music/film">Film Music</a>
 	</body>
 </html>
