--- a/templates/html/about.html
+++ b/templates/html/about.html
@@ -2,13 +2,12 @@
 <html lang="en-us">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Chandler Chilvers: Music</title>
 	</head>
 
 	<body>
 		<main>
-            <h1>Games</h1>
+            <h1>About</h1>
 		</main>
 	</body>
 </html>
