--- a/templates/html/film.html
+++ b/templates/html/film.html
@@ -2,12 +2,12 @@
 <html lang="en-us">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Chandler Chilvers: Music</title>
 	</head>
 
 	<body>
-		<h1>Music</h1>
-		<a href="/music/film">Film Music</a>
+		<main>
+            <h1>Film Music</h1>
+		</main>
 	</body>
 </html>
