--- a/templates/html/reset.css
+++ b/templates/html/reset.css
@@ -16,12 +16,18 @@ h3,
 h4,
 h5,
 h6,
+a,
 p,
 ol,
 ul,
 button,
 input,
-form {
+form,
+table,
+tr,
+th,
+
+td {
     margin: 0;
     padding: 0;
     font-weight: normal;
