--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -33,8 +33,19 @@
 			margin-top: -4px;
 		}
 
+		#site-menu ul {
+			padding: 8px 0;
+		}
+
 		#site-menu li {
 			padding-left: 6px;
+			width: 100%;
+		}
+
+		#site-menu li:hover {
+			background-color: #5b646d;
+			padding-left: 7px;
+			cursor: pointer;
 		}
 
 		#contact {
@@ -59,6 +70,28 @@
 		#contact ul {
 			margin-bottom: -10px;
 		}
+
+		#contact li {
+			padding: 8px 0;
+			width: 100%;
+		}
+
+		#contact li:hover {
+			background-color: #5b646d;
+			cursor: pointer;
+		}
+
+		#links ul {
+			padding: 8px 0;
+		}
+
+		#links ul img {
+			filter: saturate(.75) brightness(.85);
+		}
+
+		#links ul img:hover {
+			filter: saturate(1) brightness(1);
+		}
 	</style>
 
 </head>
@@ -81,7 +114,7 @@
 		<tbody>
 			<tr>
 				<!-- Sidebar -->
-				<th id="sidebar" colspan="1" width="120">
+				<td id="sidebar" colspan="1" width="120">
 					<!-- Site Menu -->
 					<div id="site-menu" align="left" class="sidebar-item">
 						<img src=" ./site-menu.gif">
@@ -99,7 +132,7 @@
 					</div>
 
 					<!-- Links -->
-					<div class="sidebar-item">
+					<div id="links" class="sidebar-item" align="center">
 						<img src="./links.gif">
 						<ul style="background-image: url('./sidebar-bg.gif');">
 							<li>
@@ -126,6 +159,8 @@
 						<img src="./sidebar-bottom.gif">
 					</div>
 
+					<img src="sidebar-spacer.gif">
+
 					<!-- Visitors -->
 					<div class="sidebar-item">
 						<h3>Visitors</h3>
@@ -133,7 +168,7 @@
 						<p>Total: 0</p>
 						<img src="globe.gif">
 					</div>
-				</th>
+				</td>
 
 				<!-- Main -->
 				<td colspan="2">
