Set up node.js backend for home page. Set up sass. Set up handlebars.

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,3 +1,8 @@
+@import reset
+@import fonts
+@import components/header
+@import components/sidebar
+
 body
     display: flex
     flex-direction: column
