--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -1,19 +1,3 @@
-@font-face
-    font-family: "Sui Generis"
-    src: url(../../fonts/Sui\ Generis.otf)
-
-body
-    display: flex
-    flex-direction: column
-    align-items: center
-    user-select: none
-
-#main
-    min-height: 100vh
-
-tr, th, td
-    vertical-align: top
-
 #sidebar
     a
         text-decoration: none
@@ -21,17 +5,23 @@ tr, th, td
         font-family: "Sui Generis"
         font-size: 14px
 
-ul
-    margin-top: -4px
+    ul
+        margin-top: -4px
 
-li
-    padding-left: 6px
-    width: 100%
+    li
+        padding-left: 6px
+        width: 100%
 
-li:hover
-    background-color: #5b646d
-    padding-left: 7px
-    cursor: pointer
+    hr
+        margin: 0 10px
+
+#site-menu
+    li
+        text-align: left
+    li:hover
+        background-color: #5b646d
+        padding-left: 7px
+        cursor: pointer
 
 #links
     ul
@@ -51,17 +41,6 @@ li:hover
         padding: 8px 0
         width: 100%
 
-li:hover
-    background-color: #5b646d
-    cursor: pointer
-
-#latest
-    height: 100%
-
-#sidebar
-    hr
-        margin: 0 10px
-
-footer
-    h3
-        text-align: center
+    li:hover
+        background-color: #5b646d
+        cursor: pointer
