--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>cwchilvers.io | {{title}} </title>
-    <link rel="stylesheet" href="{{css}}">
+    <title>cwchilvers.io | {{title}}</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
