--- a/src/views/partials/sidebar.hbs
+++ b/src/views/partials/sidebar.hbs
@@ -1,7 +1,7 @@
 <th id="sidebar" colspan="1" width="120">
-    {{> site-menu}}
-    {{> links}}
-    {{> contact}}
-    <img src="../img/sidebar/sidebar-spacer.gif">
-    {{> visitors}}
+    {{> sidebar/site-menu}}
+    {{> sidebar/links}}
+    {{> sidebar/contact}}
+    <img src="/img/sidebar/sidebar-spacer.gif">
+    {{> sidebar/visitors}}
 </th>
