Fixed views controller. Created audio player for latest music (interface needs clean-up). Created visitor utility but has problems. Created functions to make server console look nice.

--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -16,6 +16,9 @@
         margin: 0 10px
 
 #site-menu
+    ul
+        padding: 8px 0
+
     li
         text-align: left
     li:hover
@@ -27,11 +30,14 @@
     ul
         padding: 8px 0
 
-    ul img
-        filter: saturate(.75) brightness(.85)
+    ul
+        img
+            filter: saturate(.75) brightness(.85)
 
-    ul img:hover
-        filter: saturate(1) brightness(1)
+    ul
+        img:hover
+            filter: saturate(1) brightness(1)
+            box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.425)
 
 #contact
     ul
