--- a/src/views/partials/sidebar/visitors.hbs
+++ b/src/views/partials/sidebar/visitors.hbs
@@ -1,6 +1,6 @@
 <div class="sidebar-item">
     <h3>Visitors</h3>
-    <p>Today: 0</p>
-    <p>Total: 0</p>
+    <p>Today: {{todays_visitors}}</p>
+    <p>Total: {{total_visitors}}</p>
     <img src="../img/sidebar/sidebar-globe.gif">
 </div>
