--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,14 +28,14 @@ table {
   border-collapse: collapse;
 }
 
-#latest {
-  height: 100%;
-}
-
 @font-face {
   font-family: "Sui Generis";
   src: url(../../fonts/Sui\ Generis.otf);
 }
+#latest {
+  height: 100%;
+}
+
 #sidebar a {
   text-decoration: none;
   color: white;
@@ -53,6 +53,9 @@ table {
   margin: 0 10px;
 }
 
+#site-menu ul {
+  padding: 8px 0;
+}
 #site-menu li {
   text-align: left;
 }
@@ -70,6 +73,7 @@ table {
 }
 #links ul img:hover {
   filter: saturate(1) brightness(1);
+  box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.425);
 }
 
 #contact ul {
@@ -81,6 +85,42 @@ table {
 }
 #contact li:hover {
   background-color: #5b646d;
+  cursor: pointer;
+}
+
+#mini-player {
+  background-color: #f5f5f5;
+  padding: 10px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.song-info {
+  margin: 0;
+  flex: 1;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 4px;
+  background-color: #ccc;
+  border-radius: 2px;
+  margin-top: 8px;
+}
+
+.progress {
+  width: 50%;
+  height: 100%;
+  background-color: #007bff;
+  border-radius: 2px;
+}
+
+.buttons button {
+  border: none;
+  background-color: transparent;
+  font-size: 20px;
+  margin-left: 10px;
   cursor: pointer;
 }
 
