--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -3,8 +3,6 @@
         <td colspan="2" height="100">
             <h1>cwchilvers.io</h1>
         </td>
-        <td colspan="1" width="160">
-            <h3>Latest Music</h3>
-        </td>
+        {{> header/latest-music}}
     </tr>
 </thead>
