Made server console look cooler.

--- a/src/views/partials/sidebar/site-menu.hbs
+++ b/src/views/partials/sidebar/site-menu.hbs
@@ -3,12 +3,12 @@
     <ul style="background-image: url('../img/sidebar/sidebar-bg.gif');" alt="Site Menu">
         <li><a href="/"><img src="../img/sidebar/sidebar-bullet.gif">Home</a></li>
         <hr size="0">
-        <li><a href="#"><img src="../img/sidebar/sidebar-bullet.gif">Music</a></li>
+        <li><a href="/music"><img src="../img/sidebar/sidebar-bullet.gif">Music</a></li>
         <hr size="0">
-        <li><a href="#"><img src="../img/sidebar/sidebar-bullet.gif">Games</a></li>
+        <li><a href="/games"><img src="../img/sidebar/sidebar-bullet.gif">Games</a></li>
         <hr size="0">
-        <li><a href="#"><img src="../img/sidebar/sidebar-bullet.gif">Misc.</a></li>
+        <li><a href="/misc"><img src="../img/sidebar/sidebar-bullet.gif">Misc.</a></li>
         <hr size="0">
-        <li><a href="#"><img src="../img/sidebar/sidebar-bullet.gif">Archive</a></li>
+        <li><a href="/archive"><img src="../img/sidebar/sidebar-bullet.gif">Archive</a></li>
     </ul>
 </div>
