--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>cwchilvers.io | {{title}}</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
